--- a/myst.yml
+++ b/myst.yml
@@ -59,7 +59,8 @@ project:
     - title: About
       children:
         - file: ./docs/about/release-notes.md
-          # children:
+          children:
+           - file: ./docs/about/release-notes/*
           #  - pattern: ./docs/about/release-notes/*
           #    hidden: true
         - file: ./docs/about/faqs.md
