--- a/myst.yml
+++ b/myst.yml
@@ -60,7 +60,7 @@ project:
       children:
         - file: ./docs/about/release-notes.md
           children:
-           - file: ./docs/about/release-notes/*
+           - file: ./docs/about/release-notes/release-notes-v-0-4-0.md
           #  - pattern: ./docs/about/release-notes/*
           #    hidden: true
         - file: ./docs/about/faqs.md
