--- a/myst.yml
+++ b/myst.yml
@@ -31,7 +31,12 @@ project:
       children:
         - file: ./docs/collections/collections-main.md
         - file: ./docs/collections/cytosols.md
-          # children:
+          children:
+           - file: ./docs/collections/cytosols/instance-template/instance.md
+             hidden: true
+          - file: ./docs/collections/cytosols/instance-01/instance.md
+             hidden: true
+
           #  - pattern: ./docs/collections/**/*.md
           #    hidden: true
         - file: ./docs/collections/cells.md
@@ -61,6 +66,7 @@ project:
         - file: ./docs/about/release-notes.md
           children:
            - file: ./docs/about/release-notes/release-notes-v-0-4-0.md
+             hidden: true
           #  - pattern: ./docs/about/release-notes/*
           #    hidden: true
         - file: ./docs/about/faqs.md
