--- a/myst.yml
+++ b/myst.yml
@@ -33,9 +33,9 @@ project:
         - file: ./docs/collections/cytosols.md
           children:
            - file: ./docs/collections/cytosols/instance-template/instance.md
-             hidden: true
+            #  hidden: true
            - file: ./docs/collections/cytosols/instance-01/instance.md
-             hidden: true
+            #  hidden: true
 
           #  - pattern: ./docs/collections/**/*.md
           #    hidden: true
@@ -66,7 +66,7 @@ project:
         - file: ./docs/about/release-notes.md
           children:
            - file: ./docs/about/release-notes/release-notes-v-0-4-0.md
-             hidden: true
+            #  hidden: true
           #  - pattern: ./docs/about/release-notes/*
           #    hidden: true
         - file: ./docs/about/faqs.md
