--- a/site.yml
+++ b/site.yml
@@ -1,9 +1,16 @@
 version: 1
+project:
+  open_access: true
+  license:
+    content: CC-BY-4.0
+    code: cern-ohl-p
+
 site:
   template: book-theme
   nav: 
     - title: Docs
-      url: https://next.jupyterbook.org/start
+      # url: https://github.com/ProjectPythia/pythia-foundations/blob/main/myst.yml
+      url: /docs/guides/getting-started
     - title: Community
       url: https://next.jupyterbook.org/about/community
     - title: Ecosystem
@@ -13,9 +20,9 @@ site:
     - title: Help
       children:
       - title: Ask a question ❓
-        url: https://discord.gg/b46ZyXDw
+        url: https://nucleus-engineering.zulipchat.com/#narrow/channel/525993-general
       - title: Report a bug 🐛
-        url: https://github.com/jupyter-book/jupyter-book/issues
+        url: https://nucleus-engineering.zulipchat.com/#narrow/channel/525991-Zulip
   options:
     logo_url: https://bnext.bio/nucleus
     # favicon: https://raw.githubusercontent.com/jupyter-book/jupyter-book/refs/heads/next/docs/media/images/favicon.ico
