--- a/myst.yml
+++ b/myst.yml
@@ -51,6 +51,8 @@ project:
             - file: ./docs/processes/assemble-pure-reactions.md
           
           - file: ./docs/processes/cells.md
+            children: 
+            - file: ./docs/processes/assemble-pure-cell.md
           - file: ./docs/processes/assemblies.md
           - file: ./docs/processes/ants.md
       - title: Modules
