switch to cards for process pages

--- a/myst.yml
+++ b/myst.yml
@@ -47,10 +47,10 @@ project:
         children:
           - file: ./docs/processes/processes-main.md
           - file: ./docs/processes/cytosols.md
-            children:
-            - file: ./docs/processes/make-1pot-pure.md
-            - file: ./docs/processes/make-36pot-pure.md
-            - file: ./docs/processes/assemble-pure-reactions.md
+            # children:
+            # - file: ./docs/processes/make-1pot-pure.md
+            # - file: ./docs/processes/make-36pot-pure.md
+            # - file: ./docs/processes/assemble-pure-reactions.md
           
           - file: ./docs/processes/cells.md
             children: 
