--- a/myst.yml
+++ b/myst.yml
@@ -48,8 +48,8 @@ project:
         children:
           - file: ./docs/processes/processes-main.md
           - file: ./docs/processes/cytosols.md
-            # children:
-            # - file: ./docs/processes/make-1pot-pure.md
+            children:
+            - file: ./docs/processes/make-1pot-pure.md
             # - file: ./docs/processes/make-36pot-pure.md
             # - file: ./docs/processes/assemble-pure-reactions.md
           
