add bullet points to cytosols page with children

--- a/myst.yml
+++ b/myst.yml
@@ -50,9 +50,8 @@ project:
           - file: ./docs/processes/cytosols.md
             children:
             - file: ./docs/processes/make-1pot-pure.md
-            # - file: ./docs/processes/make-36pot-pure.md
-            # - file: ./docs/processes/assemble-pure-reactions.md
-          
+            - file: ./docs/processes/make-36pot-pure.md
+            - file: ./docs/processes/assemble-pure-reactions.md
           - file: ./docs/processes/cells.md
             children: 
             - file: ./docs/processes/assemble-pure-cell.md
