--- a/myst.yml
+++ b/myst.yml
@@ -60,10 +60,9 @@ project:
       - title: Modules
         children:
           - file: ./docs/modules/modules-main.md
-          - pattern: ./docs/modules/mod-list/**/*.md
-            hidden: true
-          # - pattern: ./docs/collections/**/*
-          #   hidden: true
+            children: 
+            - file: ./docs/modules/mod-list/module-template/specification.md
+            - file: ./docs/modules/mod-list/mod-plamGFP/specification.md
     - title: Guides
       children:
         - file: ./docs/guides/developer-handbook.md
